--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run" : "nodemon server.js"
+    "start" : "node server.js"
   },
   "keywords": [],
   "author": "",
